fix lists overflow

--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -26,6 +26,7 @@
             border: 1px solid black;
             padding: 10px 10px;
             font-size: 14px;
+            display: inline-block;
         &:hover {
             color: #FFCB26;
             border: 1px solid #FFCB26;
